--- a/curency-conversion-service/curency-conversion-service/src/main/resources/application.properties
+++ b/curency-conversion-service/curency-conversion-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=curency-conversion-service
+spring.application.name=curency-conversion
+server.port=8100
+spring.config.import=optional:configserver:http://localhost:8888
