--- a/curency-exchange-service/curency-exchange-service/src/main/resources/application.properties
+++ b/curency-exchange-service/curency-exchange-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=curency-exchange
+spring.application.name=currency-exchange
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 spring.jpa.show-sql=true
