--- a/limits-service/limits-service/src/main/resources/application.properties
+++ b/limits-service/limits-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=limits-service
+server.port=8180
 spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=dev
 spring.cloud.config.profile=dev
