--- a/curency-exchange-service/curency-exchange-service/src/main/resources/application.properties
+++ b/curency-exchange-service/curency-exchange-service/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.h2.console.path=/h2-console
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.generate-unique-name=false
+spring.jpa.open-in-view=false
